# CustomerSignalTracker

./: .env.example  .replit  Makefile  README.md  config.yml  pyproject.toml  replit.md  requirements.txt  run_web_app.py  signals.csv
cdp_signal_scanner/: __init__.py  config.py  main.py  scoring.py  utils.py  web_app.py
cdp_signal_scanner/data_sources/: __init__.py  base.py  business_documents.py  careers_page.py  google_cse.py  greenhouse.py  indeed.py
cdp_signal_scanner/templates/: index.html  results.html
tests/: __init__.py  test_data_sources.py  test_scoring.py  test_utils.py
